<resources>
    <string name="app_name">Calculator</string>
    <string name="calc">Розрахувати</string>
    <string name="enter_radius">Введіть радіус</string>
    <string name="textView">Розрахунок площі кола</string>
    <string name="result_message">Результат:</string>
    <string name="enter_side_value">Введіть довжину</string>
    <string name="square_area_calc">Розрахунок площі квадрата</string>
    <string name="square_next"><![CDATA[Квадрат ->]]></string>
    <string name="rectangle_next"><![CDATA[Прямокутник ->]]></string>
    <string name="circ_prev"><![CDATA[<- Коло]]></string>
    <string name="circle">Коло</string>
    <string name="square">Квадрат</string>
    <string name="rectangle">Прямокутник</string>
    <string name="rectangle_area_calc">Розрахунок площі прямокутника</string>
    <string name="enter_a_side_value">Введіть довжину сторони а</string>
    <string name="enter_b_side_value">Введіть довжину сторони b</string>
    <string name="triangle">Трикутник</string>
    <string name="enter_h_value">Введіть висоту</string>
    <string name="s" />
    <string name="triangle_area_calc">Розрахунок площі трикутника</string>
</resources>