<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/circle_menu"
        android:icon="@drawable/circle"
        android:title="@string/circle"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/square_menu"
        android:icon="@drawable/square"
        android:title="@string/square"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/rectangle_menu"
        android:icon="@drawable/rectangle"
        android:title="@string/rectangle"
        android:orderInCategory="3"
        />
    <item
        android:id="@+id/triangle_menu"
        android:icon="@drawable/triangle"
        android:title="@string/triangle"
        android:orderInCategory="4"
        />

</menu>